--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@shadcn/ui": "^0.0.4",
     "@tailwindcss/postcss": "^4.0.1",
     "emailjs-com": "^3.2.0",
+    "file-saver": "^2.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
