--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,6 +24,8 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
+    "@testing-library/jest-dom": "^6.0.0",
+    "@testing-library/react": "^14.0.0",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
@@ -32,10 +34,8 @@
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
-    "vite": "^6.0.5",
-    "@testing-library/react": "^latest",
-    "@testing-library/jest-dom": "^latest",
-    "jest": "^latest",
-    "react-scripts": "^latest"
+    "jest": "^29.0.0",
+    "react-scripts": "^5.0.0",
+    "vite": "^6.0.5"
   }
 }
